_istio/destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: todo-app-frontend
spec:
    host: todo-app-frontend
    subsets:
    - name: base
      labels:
        version: base
    - name: red
      labels:
        version: red
