_istio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-istio-ingress
  namespace: istio-system
spec:
  rules:
  - host: "todo-app-istio.example.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 80
