_istio/virtualservice.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-app-virtualservice
spec:
  hosts: 
  - 'todo-app-istio.example.local'
  gateways:
  - todo-app-gateway
  http:
  - name: backend
    match:
    - uri:
        prefix: "/api/todos"
    route:
    - destination:
        host: todo-app-backend
  - name: frontend
    match:
    - uri:
        prefix: "/"    
    route:
    - destination:
        host: todo-app-frontend-all
        subset: base
      weight: 50
    - destination:
        host: todo-app-frontend-all
        subset: red
      weight: 50
